# pp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  generated-smoke.yml
docs/: dogfood-2026-05-13.md  probe-oas3-2026-05-13.md  probe-oxide-patterns-2026-05-13.md  release-status.md  support-matrix.md  verification.md
docs/plans/: long-term-architecture-2026-05-16.md  long-term-architecture-implementation-2026-05-16.md  mcp-agent-usability-2026-05-13.md  normalization-rule-inventory-2026-05-16.md  preparation-report-inventory-2026-05-16.md  typify-patch-and-slicing-2026-05-16.md
src/: main.rs  support.rs
src/backend/: mod.rs
src/cli/: mod.rs
src/model/: arguments.rs  diagnostics.rs  direct_http_plan.rs  identity.rs  invocation_plan.rs  mod.rs  response.rs  schema.rs  value_kind.rs
src/pipeline/: mod.rs
src/progenitor_driver/: mod.rs
src/render/: mod.rs
src/render/templates/: Cargo.toml.j2  api_cargo.toml.j2  auth.rs.j2  cli_builder.rs.j2  context.rs.j2  direct_http.rs.j2  invoke.rs.j2  main.rs.j2  mcp.rs.j2  print.rs.j2  runtime.rs.j2
src/spec/: auth.rs  diagnostics.rs  json_pointer.rs  mod.rs  model.rs  normalization_rules.rs  normalize.rs  operation.rs  pre_parse.rs  preparation_rules.rs  references.rs  report.rs  schema.rs  slice.rs  transform.rs  traversal.rs
src/spec/normalize/: operation_naming.rs  pass.rs  progenitor_compatibility.rs  response_relaxation.rs
src/spec/normalize/progenitor_compatibility/: actions.rs  content_types.rs  query_params.rs  request_bodies.rs  response_variants.rs  schema_defaults.rs  schemas.rs
testdata/: petstore-minimal.yaml
tests/: apikey_smoke.rs  basic_smoke.rs  bearer_smoke.rs  check_support.rs  corpus.rs  dogfood.rs  golden_snapshots.rs  mcp_errors.rs  mcp_usability.rs  openapi31.rs  petstore_smoke.rs  slicing.rs  strict_normalization.rs  strict_preparation.rs  validate.rs
tests/common/: mod.rs
tests/corpus/: manifest.json
tests/fixtures/: interzoid.yaml  plausible.yaml  pokeapi.yaml
tests/fixtures/corpus/: airtable_records.yaml  asana_tasks.yaml  datadog_metrics.yaml  discord_channels.yaml  dropbox_files_list_folder.yaml  github_repos.yaml  github_search.yaml  hubspot_contacts_cookie_fail.yaml  jira_issue_search_fail_non_primitive_param.yaml  kubernetes_pods_fail_additional_properties.yaml  linear_issues.yaml  mailchimp_members_fail_cookie_or_deep_object.yaml  notion_pages_fail_header_param.yaml  openai_responses.yaml  sendgrid_mail_send.yaml  shopify_products_fail_relative_server.yaml  slack_conversations_history.yaml  spotify_search.yaml  stripe_customers.yaml  twilio_messages_fail_form_body.yaml  vercel_projects.yaml
tests/golden/native_core/: Cargo.toml  pp-transform-plan.json
tests/golden/native_core/src/: auth.rs  cli_builder.rs  context.rs  direct_http.rs  invoke.rs  main.rs  mcp.rs  print.rs  runtime.rs
