[package]
name = "pp"
version = "0.1.0"
edition = "2021"
description = "OpenAPI -> installable Rust CLI generator (progenitor backend + wrapper templates)"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
openapiv3 = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
heck = "0.5"
minijinja = "2"
