[workspace]
resolver = "2"

[package]
name = "native-core-api"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "=4.4.18", features = ["derive", "string"] }
reqwest = { version = "0.13", features = ["json"] }
rmcp = { version = "1", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }